envoyfilter.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: t1-healthcheck
  namespace: t1-bookinfo
spec:
  workloadSelector:
    labels:
      app: tier1-gateway
  configPatches:
  - applyTo: LISTENER
    match:
      context: SIDECAR_INBOUND
    patch:
      operation: ADD
      value:
        name: t1-healthcheck
        address:
          socket_address:
            protocol: TCP
            address: 0.0.0.0
            port_value: 9443
        filter_chains:
        - filters:
          - name: envoy.filters.network.http_connection_manager
            config:
              stat_prefix: t1_healthcheck
              route_config:
                name: t1-healthcheck
                virtual_hosts:
                - name: t1-healthcheck
                  domains:
                  - "*"
                  routes:
                  - route:
                      cluster: t1-healthcheck
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value:
        name: t1-healthcheck
        connect_timeout: 3s
        type: STATIC
        lb_policy: ROUND_ROBIN
        load_assignment:
          cluster_name: t1-healthcheck
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 127.0.0.1
                    port_value: 9443
